--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <!-- Test Git-->
+   <!-- Test Git 2-->
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.coli</groupId>
    <artifactId>carpool_web_connector</artifactId>
